--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "*",
     "react-bootstrap": "*",
     "react-dom": "*",
+    "react-media": "^1.10.0",
     "react-router-dom": "*",
     "react-scripts": "*",
     "semantic-ui-css": "*",
