--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Created by https://www.gitignore.io/api/node,react,linux
 # Edit at https://www.gitignore.io/?templates=node,react,linux
 
-### Linux ###
+## Linux ###
 *~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
