--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "*",
     "react": "*",
     "react-bootstrap": "*",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "*",
     "react-media": "^1.10.0",
     "react-router-dom": "*",
