--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "react-lazy-load-image-component": "^1.4.3",
     "react-media": "^1.10.0",
     "react-router-dom": "*",
-    "react-scripts": "*",
-    "semantic-ui-css": "*",
-    "semantic-ui-react": "*"
+    "react-scripts": "*"
   },
   "scripts": {
     "start": "react-scripts start",
